--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-multitenancy": "^4.0"
+        "spatie/laravel-multitenancy": "^4.0",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
