--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2|^8.3",
+        "ext-simplexml": "*",
         "dedoc/scramble": "^0.11.16",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-multitenancy": "^4.0",
-        "ext-simplexml": "*"
+        "saloonphp/laravel-plugin": "^3.5",
+        "saloonphp/saloon": "^3.10",
+        "spatie/laravel-multitenancy": "^4.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
