--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         "ext-simplexml": "*",
         "dedoc/scramble": "^0.11.16",
         "laravel/framework": "^11.9",
+        "laravel/horizon": "^5.29",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "saloonphp/laravel-plugin": "^3.5",
-        "saloonphp/saloon": "^3.10",
-        "spatie/laravel-multitenancy": "^4.0"
+        "saloonphp/saloon": "^3.10"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
