feat: add database configuration and new features support

--- a/.env.example
+++ b/.env.example
@@ -20,11 +20,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST_READ=172.30.0.22
+DB_HOST_WRITE=172.30.0.23
 DB_PORT=3306
 DB_DATABASE=grok_app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=devaction
+DB_PASSWORD="Bruna2012**"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
