--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "dedoc/scramble": "^0.11.16",
         "laravel/framework": "^11.9",
         "laravel/horizon": "^5.29",
+        "laravel/octane": "^2.4",
+        "laravel/pennant": "^1.11",
+        "laravel/pulse": "^1.2",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "saloonphp/laravel-plugin": "^3.5",
