--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/pulse": "^1.2",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "olssonm/l5-very-basic-auth": "^7.1",
         "saloonphp/laravel-plugin": "^3.5",
         "saloonphp/saloon": "^3.10"
     },
